<resources>
    <string name="app_name">My Application</string>
    <string name="login_txt">Login</string>
    <string name="pass_txt">Password</string>
    <string name="login_submit">Submit</string>
    <string name="frag_example_btn">Fragment example</string>
    <string name="to_register">Don\'t have an account yet ? Register.</string>
    <string name="register">Register</string>

    <string name="to_login">Back to login</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fragment_exaple">FragmentExaple</string>
    <string name="create_message_btn">New Message</string>
    <string name="title_activity_create_message">CreateMessage</string>
    <string name="receiver_hint">Receiver</string>
    <string name="content_hint">Content</string>
    <string name="create_message_title">New Message</string>
    <string name="send_message_btn">Send</string>
    <string name="view_messages_btn_txt">My Messages</string>
    <string name="title_activity_view_messages">ViewMessages</string>
    <string name="delete_db_btn">Delete Database</string>

    <string name="add_contact">Add contact</string>
    <string name="go_back">Go back</string>
    <string name="nickname">Nickname</string>
    <string name="optional">Optional</string>
</resources>
