<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/login_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:text="@string/login_txt" />

    <EditText
        android:id="@+id/login_box"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text" />

    <TextView
        android:id="@+id/pass_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:text="@string/pass_txt" />

    <EditText
        android:id="@+id/pass_box"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/first_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:text="@string/first_name" />

    <EditText
        android:id="@+id/first_name_box"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text" />

    <TextView
        android:id="@+id/last_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:text="@string/last_name" />

    <EditText
        android:id="@+id/last_name_box"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/register_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:onClick="register"/>



    <TextView
        android:id="@+id/register_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_login"
        android:onClick="toLogin"
        />

</LinearLayout>